force-app/main/default/objects/forcerules__Record_Assignment1__c/forcerules__Record_Assignment1__c.object-meta.xml
<CustomObject>
    <label>Record Assignment</label>
    <nameField>
        <displayFormat>RS{0000}</displayFormat>
        <label>Record Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>