force-app/main/default/objects/forcerules__Record_Assignment1__c/fields/forcerules__Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Owner_ID__c</fullName>
    <label>Owner ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>