force-app/main/default/objects/forcerules__Record_Assignment1__c/fields/forcerules__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Record_ID__c</fullName>
    <label>Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>