force-app/main/default/objects/forcerules__Record_Assignment1__c/fields/forcerules__Rule__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rule</label>
    <referenceTo>forcerules__Rule__c</referenceTo>
    <relationshipLabel>Record Assignments</relationshipLabel>
    <relationshipName>Record_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>