force-app/main/default/objects/forcerules__Record_Assignment1__c/fields/forcerules__Rule_ID__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Rule_ID__c</fullName>
    <description>This field is deprecated and not being used.</description>
    <inlineHelpText>This field is deprecated and not being used.</inlineHelpText>
    <label>Rule ID (Deprecated)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>